--- a/src/force-app/main/default/classes/selectors/CustomSettingsSelector.cls
+++ b/src/force-app/main/default/classes/selectors/CustomSettingsSelector.cls
@@ -15,4 +15,8 @@ public with sharing class CustomSettingsSelector {
     public LWCPagination__c getLWCPaginationSettings() {
         return LWCPagination__c.getInstance();
     }
+
+    public FeaturesEnabler__c getFeaturesEnabler() {
+        return FeaturesEnabler__c.getInstance();
+    }
 }
