--- a/src/force-app/main/default/classes/tests/TestCustomSettingsSelector.cls
+++ b/src/force-app/main/default/classes/tests/TestCustomSettingsSelector.cls
@@ -6,4 +6,11 @@ public with sharing class TestCustomSettingsSelector {
         LWCPagination__c actual = CustomSettingsSelector.getInstance().getLWCPaginationSettings();
         System.assertEquals(expected, actual);
     }
+
+    @IsTest
+    private static void getFeaturesEnablerTest() {
+        FeaturesEnabler__c expected = FeaturesEnabler__c.getInstance();
+        FeaturesEnabler__c actual = CustomSettingsSelector.getInstance().getFeaturesEnabler();
+        System.assertEquals(expected, actual);
+    }
 }
